--- a/myapp/templates/myapp/schedule.html
+++ b/myapp/templates/myapp/schedule.html
@@ -6,8 +6,8 @@
     <title>schedule</title>
 </head>
 <body>
-    <h1>{{name}}の栽培スケジュール</h1>
-    <form method="post" action="{% url 'calendar_api' %}">
+    <h1>{{crop_name_ja}}の栽培スケジュール</h1>
+    <form method="post" action="{% url 'calendar_api' crop_name_en %}">
         {% csrf_token %}
         <label for="start_date">種まき日</label>
         <input type="date" name="start_date" id="start_date">
