--- a/myapp/templates/myapp/top.html
+++ b/myapp/templates/myapp/top.html
@@ -6,6 +6,12 @@
     <title>top</title>
 </head>
 <body>
-    <h1>{{crop_name_ja}}のtop</h1>
+    <h1>{{name}}のtop</h1>
+    <img src="hoge" alt="tomato">
+    <h1>アイコトマトとは?</h1>
+    <p>「アイコ」は赤く細長い形のミニトマトです。ゼリー部分が少ないためサクサクとした食感を楽しむことができます。そ
+        のまま召し上がるも良し、加熱してソースにしても良しの万能選手です。</p>
+    <img src="hoge" alt="農家の写真">
+    <button id="chalender button" type="button">カレンダーで収穫時期を知る</button>
 </body>
 </html>
