--- a/myapp/templates/myapp/top.html
+++ b/myapp/templates/myapp/top.html
@@ -6,7 +6,7 @@
     <title>top</title>
 </head>
 <body>
-    <h1>{{name}}のtop</h1>
+    <h1>{{crop_name_ja}}のtop</h1>
     <img src="hoge" alt="tomato">
     <h1>アイコトマトとは?</h1>
     <p>「アイコ」は赤く細長い形のミニトマトです。ゼリー部分が少ないためサクサクとした食感を楽しむことができます。そ
