fix_hrefanddelete_cache

--- a/myapp/templates/myapp/chat.html
+++ b/myapp/templates/myapp/chat.html
@@ -28,9 +28,9 @@
                 <div class="hidden flex-none lg:block">
                     <ul class="menu menu-horizontal">
                         <!-- Navbar menu content here -->
-                        <li class="text-white"><a href="{% url 'top' name='tomato' %}">トマトについて知る</a></li>
-                        <li class="text-white"><a href="{% url 'chat' name='tomato' %}">AIに育て方を聞く</a></li>
-                        <li class="text-white"><a href="{% url 'schedule' name='tomato' %}">スケジュールを確認</a></li>
+                        <li class="text-white"><a href="{% url 'top' crop_name_en %}">トマトについて知る</a></li>
+                        <li class="text-white"><a href="{% url 'chat' crop_name_en %}">AIに育て方を聞く</a></li>
+                        <li class="text-white"><a href="{% url 'schedule' crop_name_en %}">スケジュールを確認</a></li>
                     </ul>
                 </div>
             </div>
@@ -41,9 +41,9 @@
             <label for="my-drawer-3" aria-label="close sidebar" class="drawer-overlay"></label>
             <ul class="menu bg-base-200 min-h-full w-80 p-4">
                 <!-- Sidebar content here -->
-                <li class="text-[#CA3B3B]"><a href="{% url 'top' name='tomato' %}">トマトについて知る</a></li>
-                <li class="text-[#CA3B3B]"><a href="{% url 'chat' name='tomato' %}">AIに育て方を聞く</a></li>
-                <li class="text-[#CA3B3B]"><a href="{% url 'schedule' name='tomato' %}">スケジュールを確認</a></li>
+                <li class="text-[#CA3B3B]"><a href="{% url 'top' crop_name_en %}">トマトについて知る</a></li>
+                <li class="text-[#CA3B3B]"><a href="{% url 'chat' crop_name_en %}">AIに育て方を聞く</a></li>
+                <li class="text-[#CA3B3B]"><a href="{% url 'schedule' crop_name_en %}">スケジュールを確認</a></li>
             </ul>
         </div>
     </div>
