--- a/myapp/templates/myapp/chat.html
+++ b/myapp/templates/myapp/chat.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>chat</title>
 </head>
-<body>
+<body class="flex flex-col min-h-screen">
     <div class="drawer">
         <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
         <div class="drawer-content flex flex-col">
@@ -52,8 +52,8 @@
     <div class="chat-container">
         <div class="messages" id="chat-messages">
             {% for message in chat_history %}
-                <div class="message {{ message.sender }}">
-                    <div class="message-content">
+                <div class="message chat {% if message.sender == 'user' %}chat-end{% else %}chat-start{% endif %}">
+                    <div class="message-content chat-bubble">
                         {{ message.message }}
                     </div>
                 </div>
@@ -66,6 +66,12 @@
                 <button type="submit">送信</button>
             </form>
         </div>
+    </div>
+    <div class="p-4 border-t flex">
+        <input id="user-input" type="text" placeholder="Type a message"
+            class="w-full px-3 py-2 border rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <button id="send-button"
+            class="bg-blue-500 text-white px-4 py-2 rounded-r-md hover:bg-blue-600 transition duration-300">Send</button>
     </div>
 </body>
 </html>
