--- a/myapp/templates/myapp/chat.html
+++ b/myapp/templates/myapp/chat.html
@@ -10,7 +10,7 @@
     <title>chat</title>
 </head>
 <body>
-    <div class="drawer">
+    <div class="z-50 drawer">
         <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
         <div class="drawer-content flex flex-col">
             <!-- Navbar -->
@@ -34,8 +34,6 @@
                     </ul>
                 </div>
             </div>
-            <!-- Page content here -->
-            Content
         </div>
         <div class="drawer-side">
             <label for="my-drawer-3" aria-label="close sidebar" class="drawer-overlay"></label>
@@ -50,10 +48,10 @@
     <title>{{ crop_name_ja }}のチャット</title>
     
     <div class="chat-container">
-        <div class="messages" id="chat-messages">
+        <div class="messages m-8" id="chat-messages">
             {% for message in chat_history %}
-                <div class="message {% if message.sender == 'user' %}message-user{% else %}message-bot{% endif %}">
-                    <div class="message-content">
+                <div class="message mt-8 {% if message.sender == 'user' %}chat-start{% else %}card bg-base-300{% endif %}">
+                    <div class="message-content {% if message.sender == 'user' %}chat-bubble chat-bubble-error{% else %}card-body{% endif %}">
                         {{ message.message }}
                     </div>
                 </div>
