--- a/myapp/templates/myapp/schedule.html
+++ b/myapp/templates/myapp/schedule.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <div class="drawer">
+    <div class="z-50 drawer">
         <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
         <div class="drawer-content flex flex-col">
             <!-- Navbar -->
