--- a/myapp/templates/myapp/schedule.html
+++ b/myapp/templates/myapp/schedule.html
@@ -45,15 +45,17 @@
             </ul>
         </div>
     </div>
-    <h1>{{crop_name_ja}}の栽培スケジュール</h1>
-    <form method="post" action="{% url 'calendar_api' crop_name_en %}">
-        {% csrf_token %}
-        <label for="start_date">栽培開始日</label>
-        <input type="date" name="start_date" id="start_date">
-
-        <button type="submit">カレンダーに登録</button>
-    </form>
-    <ul id="task_list"></ul>
+    <div class="m-4">
+        <h1 class="text-3xl font-bold text-red-500 mb-4">{{crop_name_ja}}の栽培スケジュール</h1>
+        <form method="post" action="{% url 'calendar_api' crop_name_en %}">
+            {% csrf_token %}
+            <label for="start_date">栽培開始日を入力してください</label>
+            <input class="w-full px-3 py-2.5 rounded-md border-2 focus-visible:outline-none focus:border-blue-500" type="date"
+                name="start_date" id="start_date">
+            <button class="btn btn-outline btn-success mt-4" 　type="submit">カレンダーに登録</button>
+        </form>
+        <ul id="task_list" class="steps steps-vertical"></ul>
+    </div>
 
     <script>
         const tasks = {{ tasks|safe }};  // views.pyからのtasksデータを取得
@@ -76,6 +78,7 @@
                 taskDateEnd.setDate(selectedDate.getDate() + task[0] + task[1]);
 
                 const taskItem = document.createElement('li');
+                taskItem.classList.add('step');
                 if (task[1] === 0) {
                     taskItem.textContent = `${taskDateStart.toLocaleDateString()} ${task[2]}`;
                 } else {
