--- a/myapp/templates/myapp/schedule.html
+++ b/myapp/templates/myapp/schedule.html
@@ -27,7 +27,7 @@
                 <div class="hidden flex-none lg:block">
                     <ul class="menu menu-horizontal">
                         <!-- Navbar menu content here -->
-                        <li class="text-white"><a href="{% url 'top' crop_name_en %}">トマトについて知る</a></li>
+                        <li class="text-white"><a href="{% url 'top' crop_name_en %}">{{ crop_name_ja }}について知る</a></li>
                         <li class="text-white"><a href="{% url 'chat' crop_name_en %}">AIに育て方を聞く</a></li>
                         <li class="text-white"><a href="{% url 'schedule' crop_name_en %}">スケジュールを確認</a></li>
                     </ul>
